# Arithmetic

./: Makefile  jacobi.c  jacobi.c~  logistic.c  rump  rump_cad.cc  rump_cad.cc~  rumpd  rumpd.c
cadna_c-2.0.2/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac
cadna_c-2.0.2/examples/: Makefile  Makefile.am  Makefile.in  ex1.c  ex1_cad.cc  ex2.c  ex3.cc  ex3_cad.cc  ex4.c  ex5.c  ex5_cad.cc  ex5_cad_opt.cc  ex6.c  ex7.cc
cadna_c-2.0.2/src/: Makefile  Makefile.am  Makefile.in  cadna_math.cc  cadna_math_gnu.cc  cadna_math_other.cc  cadna_type.cc
cadna_c-2.0.2/src/.deps/: libcadnaC_a-cadna_complex.Tpo  libcadnaC_a-cadna_convert.Po  libcadnaC_a-cadna_intr.Po  libcadnaC_a-cadna_math.Po  libcadnaC_a-cadna_type.Po
