SUBDIRS= src 

EXTRA_DIST= \
examples/ex1.c \
examples/ex1_cad.cc \
examples/ex2.c \
examples/ex2_cad.cc \
examples/ex3.cc \
examples/ex3_cad.cc \
examples/ex4.c \
examples/ex4_cad.cc \
examples/ex5.c \
examples/ex5_cad.cc \
examples/ex5_cad_opt.cc \
examples/ex6.c \
examples/ex6_cad.cc \
examples/ex7.cc \
examples/ex7_cad.cc \
examples/Makefile.in\
examples/Makefile.am\
doc/ug_cadna.pdf \
doc/ref_cadna.pdf
