bin_PROGRAMS=ex1 ex1_cad ex2 ex2_cad ex3 ex3_cad ex4 ex4_cad \
             ex5 ex5_cad ex5_cad_opt ex6 ex6_cad ex7 ex7_cad 


ex1_SOURCES=ex1.c
ex2_SOURCES=ex2.c
ex3_SOURCES=ex3.cc
ex4_SOURCES=ex4.c
ex5_SOURCES=ex5.c
ex6_SOURCES=ex6.c
ex7_SOURCES=ex7.cc

ex1_cad_SOURCES=ex1_cad.cc
ex2_cad_SOURCES=ex2_cad.cc
ex3_cad_SOURCES=ex3_cad.cc
ex4_cad_SOURCES=ex4_cad.cc
ex5_cad_SOURCES=ex5_cad.cc
ex5_cad_opt_SOURCES=ex5_cad_opt.cc
ex6_cad_SOURCES=ex6_cad.cc
ex7_cad_SOURCES=ex7_cad.cc

ex1_cad_LDADD=$(LDFLAGSCADNA)
ex2_cad_LDADD=$(LDFLAGSCADNA)
ex3_cad_LDADD=$(LDFLAGSCADNA)
ex4_cad_LDADD=$(LDFLAGSCADNA)
ex5_cad_LDADD=$(LDFLAGSCADNA)
ex5_cad_opt_LDADD=$(LDFLAGSCADNA)
ex6_cad_LDADD=$(LDFLAGSCADNA)
ex7_cad_LDADD=$(LDFLAGSCADNA)
